src/shared/components/TopcoderHeader/mobile/Search/style.scss
@import '~styles/tc-styles';

.icon {
  left: 18px;
  position: absolute;
  top: 14px;
}

.search {
  padding: 6px 12px 0;
  position: relative;

  input,
  input:active,
  input:focus,
  input:hover {
    box-shadow: none;
    outline: none;
  }

  input {
    background: none;
    border: 1px solid $tc-gray-60;
    box-shadow: none;
    color: $tc-white;
    font: 16px "Sofia Pro", sans-serif;
    height: 32px;
    outline: none;
    padding-left: 28px;

    &::placeholder {
      color: $tc-gray-60;
    }

    &:hover {
      border: 1px solid $tc-gray-40;
    }

    &:focus {
      border: 1px solid $tc-dark-blue-90;
    }
  }
}

